<resources>
    <string name="app_name">Intellect Academy</string>
    <string name="title_home">Home</string>
    <string name="title_Courses">Courses</string>
    <string name="title_Classes">Classes</string>
    <string name="title_Quiz">Quiz</string>
    <string name="title_Instructors">Instructors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_homewa">we are home baiby</string>
</resources>