<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_Courses"
        android:icon="@drawable/ic_baseline_courses_24"
        android:title="@string/title_Courses" />

    <item
        android:id="@+id/nav_Classes"
        android:icon="@drawable/ic_baseline_classes_24"
        android:title="@string/title_Classes" />
    <item
        android:id="@+id/nav_Quiz"
        android:icon="@drawable/ic_baseline_quiz_24"
        android:title="@string/title_Quiz" />
    <item
        android:id="@+id/nav_Instructors"
        android:icon="@drawable/ic_baseline_instructors_24"
        android:title="@string/title_Instructors" />

</menu>